# UtilityForge

./: .clang-format  .gitignore  CMakeLists.txt  PRD.md
cmake/: UtilityForgeOptions.cmake
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEPENDENCIES.md  DROPZONE_MVP.md  LINUX_KDE_LIMITATIONS.md  PRODUCT_ANALYSIS.md  ROADMAP.md  SECURITY.md
packaging/linux/: io.github.ARCns09.UtilityForge.desktop  io.github.ARCns09.UtilityForge.metainfo.xml
src/app/: ApplicationBootstrap.cpp  ApplicationBootstrap.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/core/errors/: AppError.cpp  AppError.h  ErrorFormatter.cpp  ErrorFormatter.h
src/core/notifications/: NotificationCenter.cpp  NotificationCenter.h
src/core/process/: ExternalToolRegistry.cpp  ExternalToolRegistry.h  ProcessRequest.h  ProcessRunner.cpp  ProcessRunner.h
src/core/settings/: AppPaths.cpp  AppPaths.h  SettingsService.cpp  SettingsService.h
src/core/tasks/: CancellationToken.cpp  CancellationToken.h  TaskManager.cpp  TaskManager.h  TaskRecord.h  TaskTypes.h
src/modules/dropzone/: DropZonePage.cpp  DropZonePage.h
tests/: CMakeLists.txt
tests/app/: tst_MainWindow.cpp
tests/core/: tst_AppError.cpp  tst_AppPaths.cpp  tst_CancellationToken.cpp  tst_ExternalToolRegistry.cpp  tst_ProcessRunner.cpp  tst_SettingsService.cpp  tst_TaskManager.cpp
tests/dropzone/: tst_DropZonePage.cpp
tests/fake-tools/: FakeProcess.cpp
